Created new service for users
