# internal/handlers/userHandlers.go
@@ -1,0 +1,95 @@
+package handlers
+
+import (
+	"context"
+	"task_manager/internal/userService"
+	"task_manager/internal/web/users"
+
+	"github.com/google/uuid"
+)
+
+type UserHandler struct {
+	service userService.UserService
+}
+
+func NewUserHandler(s userService.UserService) *UserHandler {
+	return &UserHandler{service: s}
+}
+
+func (h *UserHandler) GetUsers(_ context.Context, _ users.GetUsersRequestObject) (users.GetUsersResponseObject, error) {
+	allUsers, err := h.service.GetAllUsers()
+	if err != nil {
+		return nil, err
+	}
+
+	respone := users.GetUsers200JSONResponse{}
+
+	for _, usr := range allUsers {
+		user := users.User{
+			Id:        (*uuid.UUID)(&usr.ID),
+			Email:     &usr.Email,
+			Password:  &usr.Password,
+			CreatedAt: &usr.CreatedAt,
+			UpdatedAt: &usr.UpdatedAt,
+			DeletedAt: &usr.DeletedAt,
+		}
+		respone = append(respone, user)
+	}
+
+	return respone, nil
+}
+
+func (h *UserHandler) PostUsers(_ context.Context, request users.PostUsersRequestObject) (users.PostUsersResponseObject, error) {
+	userRequest := request.Body
+
+	userToCreate := userService.User{
+		Email:    *userRequest.Email,
+		Password: *userRequest.Password,
+	}
+	createdUser, err := h.service.CreateUser(userToCreate)
+
+	if err != nil {
+		return nil, err
+	}
+
+	response := users.PostUsers201JSONResponse{
+		Id:       &createdUser.ID,
+		Email:    &createdUser.Email,
+		Password: &createdUser.Password,
+	}
+
+	return response, nil
+}
+
+func (h *UserHandler) PatchUsersId(_ context.Context, request users.PatchUsersIdRequestObject) (users.PatchUsersIdResponseObject, error) {
+	userRequest := request.Body
+	userID := request.Id
+
+	userToUpdate := userService.User{
+		Email:    *userRequest.Email,
+		Password: *userRequest.Password,
+	}
+	updatedUser, err := h.service.UpdateUser(userID, userToUpdate)
+
+	if err != nil {
+		return nil, err
+	}
+
+	response := users.PatchUsersId200JSONResponse{
+		Id:       &updatedUser.ID,
+		Email:    &updatedUser.Email,
+		Password: &updatedUser.Password,
+	}
+
+	return response, nil
+}
+
+func (h *UserHandler) DeleteUsersId(_ context.Context, request users.DeleteUsersIdRequestObject) (users.DeleteUsersIdResponseObject, error) {
+	userID := request.Id
+
+	if err := h.service.DeleteUser(userID); err != nil {
+		return nil, err
+	}
+
+	return users.DeleteUsersId204Response{}, nil
+}
